--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>主页</title>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8">
+    <link href="favicon.ico" rel="shortcut icon"/>
+    <title>YOU ARE MY FAIRY FOREVER</title>
+    <link rel="stylesheet" type="text/css" href="./css/lib/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="./css/login.css">
+    <script type="text/javascript" src="./js/lib/jquery-3.1.0.min.js"></script>
+    <script type="text/javascript" src="./js/lib/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./js/common/config.js"></script>
+    <script type="text/javascript" src="./js/common/common.js"></script>
+    <script type="text/javascript" src="./js/lib/md5.js"></script>
 </head>
 <body>
-测试
+    小仙女，我爱你！我以后就在这个页面记录我对的思念哈！
 </body>
 </html>
