--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="favicon.ico" rel="shortcut icon"/>
     <title>YOU ARE MY FAIRY FOREVER</title>
     <link rel="stylesheet" type="text/css" href="./css/lib/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="./css/login.css">
+    <link rel="stylesheet" type="text/css" href="./css/index.css">
     <script type="text/javascript" src="./js/lib/jquery-3.1.0.min.js"></script>
     <script type="text/javascript" src="./js/lib/bootstrap.min.js"></script>
     <script type="text/javascript" src="./js/common/config.js"></script>
