--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" type="text/css" href="./css/lib/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./css/index.css">
     <script type="text/javascript" src="./js/lib/jquery-3.1.0.min.js"></script>
+    <script type="text/javascript" src="./js/common/auth.js"></script>
     <script type="text/javascript" src="./js/lib/bootstrap.min.js"></script>
     <script type="text/javascript" src="./js/common/config.js"></script>
-    <script type="text/javascript" src="./js/common/auth.js"></script>
+    <script type="text/javascript" src="./js/lib/md5.js"></script>
     <script type="text/javascript" src="./js/page/index.js"></script>
 </head>
 <body>
