--- a/index.html
+++ b/index.html
@@ -25,15 +25,23 @@
     <hr/>
     <div class="row" id="fairyContent">
         <div class="jumbotron">
-            <h1>Hello, world!</h1>
-            <p>...</p>
-            <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+            <h1>我和小仙女的温馨小家</h1>
+            <p>相遇不必太早，只要能在一起就没有迟到，爱得早不如爱得刚刚好。</p>
+            <p class="text-danger">小仙女，我以后就在这里书写我对你的喜爱哈。爱你额！么么哒！</p>
         </div>
-        <div class="col-xs-8">
-            <h1>目录</h1>
-        </div>
-        <div class="col-xs-4">
-            <img src="./favicon.ico" alt="">
+        <h1>目录</h1>
+        <hr/>
+        <div class="col-xs-3 blog" onclick="goBlog('ToFairy')">
+            <div class="row">
+                <img src="./img/salwa-1108813.jpg" alt="美图" class="img-circle" height="300px" width="100%">
+            </div>
+            <div class="row">
+                <h4>To Fairy</h4>
+                <span class="">介绍：</span>
+                <p class="text-primary">此篇文章是第一次写给我家小仙女的情书。
+                    当时还不知道小仙女的心意，害怕失去她，害怕自己一直只是单相思。
+                所以才写了这篇情书，去表明自己的心意。</p>
+            </div>
         </div>
     </div>
     <div class="row" id="learnContent">
@@ -43,9 +51,9 @@
         </div>
         <h1>目录</h1>
         <hr/>
-        <div class="col-xs-3 blog" onclick="goBlog()">
+        <div class="col-xs-3 blog" onclick="goBlog('Gradle 学习笔记')">
             <div class="row">
-                <img src="./img/field-of-poppies-3415643_640.jpg" alt="美图" class="img-circle" height="100%" width="100%">
+                <img src="./img/flowers-1621066.jpg" alt="美图" class="img-circle" height="300px" width="100%">
             </div>
             <div class="row">
                 <h4>Gradle 学习笔记</h4>
