修改  表头 切换问题

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
     </div>
     <hr/>
-    <div class="row" id="fairyContent">
+    <div class="row show" id="fairyContent">
         <div class="jumbotron">
             <h1>我和小仙女的温馨小家</h1>
             <p>相遇不必太早，只要能在一起就没有迟到，爱得早不如爱得刚刚好。</p>
@@ -44,7 +44,7 @@
             </div>
         </div>
     </div>
-    <div class="row" id="learnContent">
+    <div class="row hidden" id="learnContent">
         <div class="jumbotron">
             <h1>Java Learning Notes</h1>
             <p>this is my java learning notes</p>
@@ -66,7 +66,7 @@
 
 
     </div>
-    <div class="row" id="moodContent">
+    <div class="row hidden" id="moodContent">
         <h1>moodContent</h1>
     </div>
 </div>
