添加爱情故事汇

--- a/index.html
+++ b/index.html
@@ -33,22 +33,12 @@
         </div>
         <h1>目录</h1>
         <hr/>
-        <!--<div class="col-xs-12 blog" onclick="goBlog('ToFairy')">-->
-            <!--<div class="row">-->
-                <!--<h4>To Fairy Love Letter</h4>-->
-                <!--<span class="">介绍：</span>-->
-                <!--<p class="text-primary">此篇文章是第一次写给我家小仙女的情书。-->
-                    <!--当时还不知道小仙女的心意，害怕失去她，害怕自己一直只是单相思。-->
-                <!--所以才写了这篇情书，去表明自己的心意。</p>-->
-            <!--</div>-->
-        <!--</div>-->
-        <table data-search="true" data-pagination="true" style="table-layout:fixed" id="tab">
+        <table data-search="true" data-pagination="true" style="table-layout:fixed" id="fairyTab">
             <thead>
             <tr>
-                <th>id</th>
-                <th>date</th>
-                <th>src</th>
-                <th>ver</th>
+                <th>标题</th>
+                <th>内容简介</th>
+                <th>发布时间</th>
             </tr>
             </thead>
             <tbody>
