--- a/index.html
+++ b/index.html
@@ -55,23 +55,40 @@
         </div>
         <h1>目录</h1>
         <hr/>
-        <div class="col-xs-3 blog" onclick="goBlog('Gradle 学习笔记')">
-            <div class="row">
-                <img src="./img/flowers-1621066.jpg" alt="美图" class="img-circle" height="300px" width="100%">
-            </div>
-            <div class="row">
-                <h4>Gradle 学习笔记</h4>
-                <span class="">介绍：</span>
-                <p class="text-primary">Gradle是一个基于Apache Ant和Apache Maven概念的项目自动化建构工具。
-                    它使用一种基于Groovy的特定领域语言来声明项目设置，而不是传统的XML。</p>
-            </div>
-        </div>
+        <table data-search="true" data-pagination="true" style="table-layout:fixed" id="learnTab">
+            <thead>
+            <tr>
+                <th>标题</th>
+                <th>内容简介</th>
+                <th>发布时间</th>
+            </tr>
+            </thead>
+            <tbody>
 
-
-
+            </tbody>
+        </table>
     </div>
     <div class="row hidden" id="moodContent">
-        <h1>moodContent</h1>
+        <div class="jumbotron">
+            <h1>My Mood Notes</h1>
+            <p>记录是最美好的回忆，坚持每天记录自己的心情，开心成长每一天。
+                <a href="https://blog.csdn.net/m0_37204491">逍遥绝情的博客</a></p>
+            <p class="text-danger">To Fairy: Grow old along with me, the best is yet to be.</p>
+        </div>
+        <h1>目录</h1>
+        <hr/>
+        <table data-search="true" data-pagination="true" style="table-layout:fixed" id="moodTab">
+            <thead>
+            <tr>
+                <th>标题</th>
+                <th>内容简介</th>
+                <th>发布时间</th>
+            </tr>
+            </thead>
+            <tbody>
+
+            </tbody>
+        </table>
     </div>
 </div>
 </body>
