添加背景音乐

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <script type="text/javascript" src="./js/page/index.js"></script>
 </head>
 <body>
+<audio autoplay="autoplay" loop="loop" >
+    <source src="./img/白小白%20-%20最美情侣.mp3" type="audio/mp3" />
+</audio>
 <div class="container">
     <div class="row" id="topTile">
         <ul class="nav nav-pills">
@@ -29,7 +32,7 @@
         <div class="jumbotron">
             <h1>我和小仙女的温馨小家</h1>
             <p>相遇不必太早，只要能在一起就没有迟到，爱得早不如爱得刚刚好。</p>
-            <p class="text-danger">小仙女，我以后就在这里书写我对你的喜爱哈。爱你额！么么哒！</p>
+            <p class="text-danger">My heart beats for you every day. I am inspired by you everyminute, and I worry about you every second. It is wonderful to have you in my life。</p>
         </div>
         <h1>目录</h1>
         <hr/>
