--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
     <link rel="stylesheet" type="text/css" href="./css/lib/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./css/index.css">
     <script type="text/javascript" src="./js/lib/jquery-3.1.0.min.js"></script>
+    <script type="text/javascript" src="./js/lib/jquery.cookie.min.js"></script>
+    <script type="text/javascript" src="./js/common/config.js"></script>
+    <script type="text/javascript" src="./js/lib/md5.js"></script>
     <script type="text/javascript" src="./js/common/auth.js"></script>
     <script type="text/javascript" src="./js/lib/bootstrap-table.js"></script>
     <script type="text/javascript" src="./js/lib/bootstrap.min.js"></script>
-    <script type="text/javascript" src="./js/common/config.js"></script>
-    <script type="text/javascript" src="./js/lib/md5.js"></script>
     <script type="text/javascript" src="./js/page/index.js"></script>
 </head>
 <body>
-<audio autoplay="autoplay" loop="loop" >
-    <source src="./img/白小白%20-%20最美情侣.mp3" type="audio/mp3" />
+<audio autoplay="autoplay" loop="loop">
+    <source src="./img/白小白%20-%20最美情侣.mp3" type="audio/mp3"/>
 </audio>
 <div class="container">
     <div class="row" id="topTile">
@@ -32,7 +33,8 @@
         <div class="jumbotron">
             <h1>我和小仙女的温馨小家</h1>
             <p>相遇不必太早，只要能在一起就没有迟到，爱得早不如爱得刚刚好。</p>
-            <p class="text-danger">My heart beats for you every day. I am inspired by you everyminute, and I worry about you every second. It is wonderful to have you in my life。</p>
+            <p class="text-danger">My heart beats for you every day. I am inspired by you everyminute, and I worry about
+                you every second. It is wonderful to have you in my life。</p>
         </div>
         <h1>目录</h1>
         <hr/>
